--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "express-mongoose": "^0.1.0",
+    "mongoose": "^4.9.1"
   }
 }
