--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-mongoose": "^0.1.0",
-    "mongoose": "^4.9.1"
+    "mongoose": "^4.9.1",
+    "multer": "^1.3.0"
   }
 }
